# sudoku-generator-cpp

./: CMakeLists.txt  Cell.hpp  Grid.hpp  README.md  Strategies.hpp  generator.c  generator.cpp  generator_test.cc  list.c  list.h  main.c  sudoku.h  test_axis_missing.c  test_check_puzzle.c  test_deduce.c  test_figure_bits.c  test_find_next_move.c  test_list.c  test_list_bits.c  test_make_array.c  test_make_puzzle.c  test_pick_better.c  test_pos_for.c  test_shuffle_array.c  test_solve_board.c  test_solve_next.c
js/: generator.js  package-lock.json  package.json
js/test/: makepuzzle.js
